objects/Turnkey__c.object
<CustomObject>
    <fields>
        <fullName>BX_041__c</fullName>
        <label>BX-041</label>
        <referenceTo>BX_041__c</referenceTo>
        <relationshipLabel>Turnkeys</relationshipLabel>
        <relationshipName>Turnkeys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Metadata</label>
        <referenceTo>Question_Metadata__c</referenceTo>
        <relationshipLabel>Turnkeys</relationshipLabel>
        <relationshipName>Turnkeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Turnkey_Name__c</fullName>
        <label>Turnkey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Turnkey</label>
    <nameField>
        <displayFormat>TK-{00000}</displayFormat>
        <label>Turnkey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turnkeys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>